# AI-Rag-Assistant-V3

./: .dvcignore  .gitignore  README.md  dvc.yaml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: cleaning.yaml  embeddings.yaml  guardrails.yaml  ingestion.yaml  retrieval.yaml
data/embeddings/: .gitignore
data/processed/chunks/: .gitignore
data/raw/: Document.pdf.dvc
src/cleaning/: clean.py
src/embeddings/: embed.py  store.py
src/ingestion/: ingest.py
src/rag/: chain.py  explainability.py  guardrails.py  memory.py  prompt.py  schema.py
src/retrieval/: dense.py  hybrid.py  reranker.py  sparse.py
src/services/: rag_Service.py
src/utils/: config.py  logging.py
tests/integration/: test_chroma_storage.py  test_ing_cle_embedding.py  test_ingestion_clean.py  test_rag_flow.py
tests/unit/: test_cleaning.py  test_embed.py  test_guardrails.py  test_hybrid.py  test_ingestion.py  test_prompt.py  test_sparse.py  test_store.py
